--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,5 +5,4 @@ include __init__.py model.py display.py
 include doc/*.rst doc/*.py doc/*.svg
 include unittest/*.py
 recursive-include doc/html *
-prune doc/html/.doctrees
-include unittest/*.py
+prune doc/html/.*
